[gd_scene load_steps=4 format=3 uid="uid://dauv10f6qdr2v"]

[ext_resource type="Script" uid="uid://b1hqkwhwpgyti" path="res://start_menu.gd" id="1_y26ei"]
[ext_resource type="Texture2D" uid="uid://7ttkje3iw6fn" path="res://Assets/floor.png" id="2_yxx3c"]

[sub_resource type="LabelSettings" id="LabelSettings_ndybt"]
font_size = 48

[node name="StartMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_y26ei")

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color(0.593134, 0.593134, 0.593134, 1)
layout_mode = 0
offset_right = 640.0
offset_bottom = 360.0
texture = ExtResource("2_yxx3c")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/CenterContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "GAME OVER"
label_settings = SubResource("LabelSettings_ndybt")
horizontal_alignment = 1

[node name="DefeatMessage" type="Label" parent="MarginContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "The wizard has defeated you...
It took [X] seconds."
horizontal_alignment = 1

[node name="StartGame" type="Button" parent="MarginContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Play Again"

[node name="ReturnToTitle" type="Button" parent="MarginContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Return to Title"

[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/StartGame" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/ReturnToTitle" to="." method="_on_return_to_title_pressed"]
